

2005/02/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in GWEN_Directory_HandlePathElement() on WIN32 platforms
- decreased verbosity of directory_all.c and in nettransportssl.c
- added a note about regexp.dll to README
- now always break SSL connection if the user does not trust the cert (not
  even temporarily)
- fixed a newly introduced bug in mklistdoc/Makefile.am: GWEN_HEADERS must be
  quoted.


2005-02-14   Christian Stimming <stimming@tuhh.de>

	* configure.ac, */Makefile.am: Clean up and unify installation
	variables so that the gwenhywfar-config script is prepared to be
	adapted by the windows setup program. Adapt Makefile.am's
	accordingly.


2005/02/11: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- this lib now uses $libdir instead of $prefix/lib


===========================================================================
MARK: released gwenhywfar-1.7.2 (2005/01/30)
===========================================================================


2005/01/30: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- now save all certificates again, but: Only create different extension if
  certificate is new (otherwise older certificates are overwritten)


2005/01/29: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- only save cert if it is new
- decreased verbosity


===========================================================================
MARK: released gwenhywfar-1.7.1 (2005/01/27)
===========================================================================


2005/01/27: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added a timeout catcher on SSL connections waiting to be shut down
- added eror checking for SSL_shutdown
-> finally fixes the nasty SSL bug I was hunting ;-)
  Thanks to Thomas Baumgart for his help with this ;-)

