@@ -1,8 +1,9 @@
-; Script generated by the Inno Setup Script Wizard and heavily
-; modified by hand by Christian Stimming.
+; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; Input configuration for the Inno Setup Compiler
+; Copyright (c) 2004-2005 Christian Stimming <stimming@tuhh.de>
 ;
 ; Inno Setup Compiler: See http://www.jrsoftware.org/isdl.php
-;
+; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [Setup]
 ; Using the name here directly because we want it capitalized
@@ -31,6 +32,10 @@ Name: "main"; Description: "{cm:MainFiles}"; Types: full binary custom; Flags: f
 Name: "devel"; Description: "{cm:DevelFiles}"; Types: full
 Name: "doc"; Description: "{cm:DocFiles}"; Types: full
 
+; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; Here we configure the included files and the place of their
+; installation
+; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [Files]
 ; The main DLL
 Source: "src\@PACKAGE@32_@GWENHYWFAR_SO_EFFECTIVE@.dll"; DestDir: "{win}"; Flags: sharedfile; Components: main
@@ -38,12 +43,14 @@ Source: "src\@PACKAGE@32_@GWENHYWFAR_SO_EFFECTIVE@.dll"; DestDir: "{win}"; Flags
 ; The lib file for linking against it
 Source: "src\@PACKAGE@32_@GWENHYWFAR_SO_EFFECTIVE@.lib"; DestDir: "{app}\lib"; Flags: sharedfile; Components: devel
 
-; The config-script, the headers, and the aclocal macro. FIXME: Are
-; there additional libraries in $libdir which should be
-; distributed? So far they are not distributed.
-Source: "distribution\win32-tmp\bin\*"; DestDir: "{app}\bin"; Flags: recursesubdirs; Components: devel
+; The config-script. It is post-processed by the Pascal script below.
+Source: "@PACKAGE@-config.in.in"; DestDir: "{app}\bin"; Flags: recursesubdirs; Components: devel; AfterInstall: MyAfterInstallConfig({app}\bin\@PACKAGE@-config)
+
+; The headers, and the aclocal macro. 
 Source: "distribution\win32-tmp\include\*"; DestDir: "{app}\include"; Flags: ignoreversion recursesubdirs; Components: devel
 Source: "distribution\win32-tmp\share\*"; DestDir: "{app}\share"; Flags: ignoreversion recursesubdirs; Components: devel
+; FIXME: So far the plugins are not compiled on windows, so they are
+; also not distributed.
 
 ; And all the documentation
 Source: "README"; DestDir: "{app}\doc\@PACKAGE@"; Components: doc
@@ -53,12 +60,83 @@ Source: "AUTHORS"; DestDir: "{app}\doc\@PACKAGE@"; Components: doc
 Source: "ChangeLog"; DestDir: "{app}\doc\@PACKAGE@"; Components: doc
 
 
+; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; This large section is a Pascal scripting program that will modify
+; the gwenhywfar-config shell script so that it then includes the
+; correct values according to our local installation. See
+; http://www.remobjects.com/?ps for a syntax reference.
+; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[Code]
+function MingwBacksl(const S: String): String;
+begin
+  { Modify the path name S so that it can be used by MinGW }
+  if Length(ExtractFileDrive(S)) = 0 then
+    Result := S
+  else begin
+    Result := '/'+S;
+    StringChange(Result, ':\', '\');
+  end;
+  StringChange(Result, '\', '/');
+end;
+
+procedure MyAfterInstallConfig(FileName: String);
+var
+  FileString, appdir, windir, includedir, plugindir: String;
+  Res: Boolean;
+begin
+
+  { Load the unchanged original file }
+  Res := LoadStringFromFile(Format1('%s.in.in',FileName), FileString);
+  if Res = False then
+    MsgBox('Error on loading '+FileName+'.in.in for final adaptation', mbInformation, MB_OK);
+
+  { Insert the custom file header; #10 is the linefeed character }
+  Insert('#!/bin/sh '#10'dir="@prefix'+'@"'#10, FileString, 0);
+
+  { Get the installation-specific paths }
+  windir := MingwBacksl(ExpandConstant('{win}'));
+  appdir := MingwBacksl(ExpandConstant('{app}'));
+  includedir := appdir + '/include';
+  plugindir := appdir + '/lib/@PACKAGE@/plugins';
+
+  { Now make all the replacements }
+  { Explanation: StringChange(S,FromStr,ToStr): Change all occurances in S of FromStr to ToStr. }
+  StringChange(FileString, '@'+'prefix@', appdir);
+  StringChange(FileString, '@'+'libdir@', windir);
+  StringChange(FileString, '@'+'ssl_includes@', '@ssl_includes@');
+  StringChange(FileString, '@'+'gwenhywfar_includes@', '-I'+includedir);
+  StringChange(FileString, '@'+'gwenhywfar_ldflags@', '-L'+windir);
+  StringChange(FileString, '@'+'gwenhywfar_libs@', '@gwenhywfar_libs@');
+  StringChange(FileString, '@'+'gwenhywfar_libspp@', '@gwenhywfar_libspp@');
+  StringChange(FileString, '@'+'gwenhywfar_libsui@', '@gwenhywfar_libsui@');
+  StringChange(FileString, '@'+'gwenhywfar_pkgincludedir@', includedir+'/@PACKAGE@');
+  StringChange(FileString, '@'+'gwenhywfar_plugindir@', plugindir);
+  StringChange(FileString, '@'+'gwenhywfar_sections@', '@gwenhywfar_sections@');
+  StringChange(FileString, '@'+'GWENHYWFAR_VERSION_MAJOR@', '@GWENHYWFAR_VERSION_MAJOR@');
+  StringChange(FileString, '@'+'GWENHYWFAR_VERSION_MINOR@', '@GWENHYWFAR_VERSION_MINOR@');
+  StringChange(FileString, '@'+'GWENHYWFAR_VERSION_PATCHLEVEL@', '@GWENHYWFAR_VERSION_PATCHLEVEL@');
+  StringChange(FileString, '@'+'GWENHYWFAR_VERSION_BUILD@', '@GWENHYWFAR_VERSION_BUILD@');
+  StringChange(FileString, '@'+'GWENHYWFAR_VERSION_TAG@', '@GWENHYWFAR_VERSION_TAG@');
+  StringChange(FileString, '@'+'USE_NCURSES@', '@USE_NCURSES@');
+  StringChange(FileString, '@'+'USE_CRYPT@', '@USE_CRYPT@');
+
+  { Save the final file }
+  Res := SaveStringToFile(FileName, FileString, False);
+  if Res = False then
+    MsgBox('Error on saving '+FileName+' for final adaptation', mbInformation, MB_OK);
+
+end;
+
+
 [Languages]
 Name: "en"; MessagesFile: "compiler:Default.isl"
 Name: "de"; MessagesFile: "compiler:Languages\German.isl"
 Name: "pt"; MessagesFile: "compiler:Languages\PortugueseStd.isl"
 Name: "fr"; MessagesFile: "compiler:Languages\French.isl"
 
+; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; These are only for improved text messages
+; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [Messages]
 ; *** "Select Destination" wizard page
 SelectDirLabel3=Setup will install [name] into the following folder. If you have MinGW installed on your system, you can safely choose MinGW's root folder here as well (e.g. c:\msys\1.0).
